# taralli-protocol

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  config.json  example_server_config.json  justfile  test.json
.github/workflows/: lint_and_test.yml
contracts/: .env.example  .gitignore  README.md  deployments.json  foundry.toml  remappings.txt
contracts/deployments/: holesky_deployments.json  sepolia_deployments.json
contracts/docs/: bombetta_spec.md  porchetta_spec.md  universal_bombetta_spec.md  universal_porchetta_spec.md
contracts/docs/prototypes/: aligned_layer_bombetta_spec.md  bombetta_v2_spec.md
contracts/script/: AddAdmin.s.sol  Approvals.s.sol  CheckBalanceAndApproval.s.sol  Deploy.s.sol  DeployBombetta.s.sol  Mint.s.sol  PermitApprove.s.sol
contracts/src/: Bombetta.sol  UniversalBombetta.sol  UniversalPorchetta.sol
contracts/src/abstract/: Bombetta.sol  Porchetta.sol
contracts/src/interfaces/: IBombetta.sol  IGroth16Verifier.sol  IPermit2.sol  IPorchetta.sol
contracts/src/libraries/: BombettaErrors.sol  BombettaTypes.sol  Errors.sol  PorchettaTypes.sol
contracts/src/verifiers/: GnarkVerifier.sol  SimpleGroth16Verifier.sol
contracts/test/: BaseTest.sol
contracts/test-proof-data/aligned-layer/: AlignedLayerTestData.md
contracts/test-proof-data/gnark/: exponentiate.wip  gnark_circuit.r1cs  input.json  prover.go  public.json
contracts/test-proof-data/groth16/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau
contracts/test-proof-data/risc0/: even-number-proof.json  is-even  risc0_guest_program_inputs.json
contracts/test-proof-data/sp1/: fibonacci-program
contracts/test/invariant/: UniversalBombettaInvariant.t.sol
contracts/test/mocks/: ERC20Mock.sol
contracts/test/unit/: Risc0UniversalBombetta.t.sol  UniversalBombetta.t.sol  UniversalPorchetta.t.sol
crates/taralli-client/: Cargo.toml
crates/taralli-client/src/: analyzer.rs  api.rs  bidder.rs  config.rs  error.rs  lib.rs  nonce_manager.rs  resolver.rs  searcher.rs  tracker.rs  worker.rs
crates/taralli-client/src/aaareference/: api_provider.rs  config_provider.rs  config_requester.rs  offer_bidder.rs  offer_resolver.rs  offer_tracker.rs  provider_client_builder.rs  request_bidder.rs  request_resolver.rs  request_tracker.rs  requester_client.rs
crates/taralli-client/src/analyzer/: mod.rs  offer.rs  request.rs
crates/taralli-client/src/api/: compression.rs  mod.rs  query.rs  submit.rs  subscribe.rs
crates/taralli-client/src/bidder/: mod.rs  offer.rs  request.rs
crates/taralli-client/src/client/: mod.rs  provider_offering.rs  provider_searching.rs  provider_streaming.rs  requester_requesting.rs  requester_searching.rs
crates/taralli-client/src/client/provider/: mod.rs  offering.rs  streaming.rs
crates/taralli-client/src/client/requester/: mod.rs  requesting.rs  searching.rs
crates/taralli-client/src/intent_builder/: mod.rs  offer.rs  request.rs
crates/taralli-client/src/resolver/: mod.rs  offer.rs  request.rs
crates/taralli-client/src/searcher/: mod.rs  offer.rs
crates/taralli-client/src/tracker/: mod.rs  offer.rs  request.rs
crates/taralli-common/: Cargo.toml
crates/taralli-primitives/: Cargo.toml  Permit2.json  UniversalBombetta.json  UniversalPorchetta.json  build.rs
crates/taralli-primitives/scripts/: check_and_update_abi.sh
crates/taralli-primitives/src/: env.rs  error.rs  lib.rs  market.rs  markets.rs  offer.rs  request.rs  utils.rs  validation.rs
crates/taralli-primitives/src/abi/: mod.rs  permit2.rs  universal_bombetta.rs  universal_porchetta.rs
crates/taralli-primitives/src/common/: types.rs
crates/taralli-primitives/src/compression_utils/: compression.rs  db.rs  intents.rs  mod.rs
crates/taralli-primitives/src/intents/: mod.rs  offer.rs  request.rs
crates/taralli-primitives/src/server_utils/: db.rs  mod.rs
crates/taralli-primitives/src/systems/: aligned_layer.rs  arkworks.rs  gnark.rs  mod.rs  risc0.rs  sp1.rs
crates/taralli-primitives/src/validation/: mod.rs  offer.rs  registry.rs  request.rs
crates/taralli-provider/: Cargo.toml
crates/taralli-provider/examples/: aligned_layer_provider.rs  arkworks_provider.rs  multi_provider.rs  risc0_bonsai_provider.rs  risc0_provider.rs  sp1_provider.rs  sp1_succint_provider.rs
crates/taralli-provider/src/: analyzer.rs  api.rs  bidder.rs  builder.rs  config.rs  error.rs  lib.rs  resolver.rs  worker.rs
crates/taralli-provider/src/workers/: aligned_layer.rs  arkworks.rs  gnark.rs  mod.rs  risc0.rs  risc0_bonsai.rs  sp1.rs
crates/taralli-provider/src/workers/risc0/: local.rs  mod.rs  remote.rs
crates/taralli-provider/src/workers/sp1/: local.rs  mod.rs  remote.rs
crates/taralli-requester/: Cargo.toml
crates/taralli-requester/examples/: aligned_layer_requester.rs  arkworks_requester.rs  risc0_requester.rs  sp1_requester.rs
crates/taralli-requester/src/: api.rs  builder.rs  config.rs  error.rs  lib.rs  nonce_manager.rs  tracker.rs
crates/taralli-server/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.pg.yml  docker-compose.yml
crates/taralli-server/examples/: request.rs  subscribe.rs
crates/taralli-server/src/: app_state.rs  brotli.rs  config.rs  error.rs  extracted_intents.rs  extracted_request.rs  lib.rs  postgres.rs  subscription_manager.rs  validation.rs
crates/taralli-server/src/routes/: mod.rs  query.rs  submit.rs  subscribe.rs
crates/taralli-server/src/state/: mod.rs  offer.rs  request.rs
crates/taralli-server/src/utils/: mock_provider.rs  mod.rs
crates/taralli-server/tests/: server_tests.rs  subscription_manager_tests.rs
crates/taralli-server/tests/common/: fixtures.rs  helpers.rs
crates/taralli-systems/: Cargo.toml
crates/taralli-systems/src/: error.rs  id.rs  lib.rs
crates/taralli-worker/: Cargo.toml
crates/taralli-worker/src/: aligned_layer.rs  arkworks.rs  error.rs  gnark.rs  lib.rs
docs/: CONTRIBUTING.md  api-schemas.md  roadmap.md  taralli-design.md
external-provers/gnark/: go.mod  go.sum
sql/migrations/: v1_offer.sql
tests/stress/: arkworks_multiplier_request.json
(+35 files in other folders)
