[workspace]
resolver = "2"
members = [
    "crates/taralli-primitives",
    "crates/taralli-client",
    "crates/taralli-server",
]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
taralli-primitives = { path = "crates/taralli-primitives" }
alloy = { version = "0.8.0", default-features = false, features = [
    "full",
    "reqwest-rustls-tls",
] }
brotli = "7.0.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.13"
serde_json = "1.0.117"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
dotenv = "0.15.0"
futures-util = "0.3.30"
futures = "0.3.30"
lazy_static = "1.5.0"
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6.3"
url = { version = "2.5.2", features = ["serde"] }
sha3 = "0.10.8"
