[workspace]
members = [
    "crates/taralli-primitives",
    "crates/taralli-provider",
    "crates/taralli-requester",
    "crates/taralli-server",
]

[profile.stripped]
inherits = "release"
debug = 0
strip = "debuginfo"
lto = "thin"

# This profile is used for CI testing, hence why we remove any overhead from debug compiling.
[profile.ci]
inherits = "dev"
debug = 0
strip = "symbols"
opt-level = 0  
panic = "abort"         
debug-assertions = false
incremental = false

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
taralli-primitives = { path = "crates/taralli-primitives" }
taralli-requester = { path = "crates/taralli-requester" }
taralli-provider = { path = "crates/taralli-provider" }
alloy = { version = "0.8.0", default-features = false, features = [
    "full",
    "reqwest-rustls-tls",
] }
brotli = "7.0.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.13"
serde_json = "1.0.117"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.38"
thiserror = "2.0.3"
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "multipart"
] }
dotenv = "0.15.0"
futures-util = "0.3.30"
futures = "0.3.30"
lazy_static = "1.5.0"
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.3"
url = { version = "2.5.2", features = ["serde"] }
sha3 = "0.10.8"
