[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["N0xMare", "medittere"]
homepage = "https://github.com/taralli-labs/taralli-protocol"
repository = "https://github.com/taralli-labs/taralli-protocol"
keywords = ["ethereum", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
members = [
    "bin/*",
    "crates/taralli-primitives/",
    "crates/taralli-client/",
    "crates/taralli-server/",
    "crates/taralli-worker/",
]

resolver = "2"

[profile.stripped]
inherits = "release"
debug = 0
strip = "debuginfo"
lto = "thin"

# This profile is used for CI testing, hence why we remove any overhead from debug compiling.
[profile.ci]
inherits = "dev"
debug = 0
strip = "symbols"
opt-level = 0  
panic = "abort"         
debug-assertions = false
incremental = false

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
taralli-primitives = { path = "crates/taralli-primitives" }
taralli-client = { path = "crates/taralli-client" }
alloy = { version = "0.8.0", default-features = false, features = [
    "full",
    "reqwest-rustls-tls",
] }
brotli = "7.0.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.13"
tokio-postgres = { version = "0.7.12", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
serde_json = "1.0.117"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "multipart"
] }
dotenv = "0.15.0"
futures-util = "0.3.30"
futures = "0.3.30"
lazy_static = "1.5.0"
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6.3"
url = { version = "2.5.2", features = ["serde"] }
sha3 = "0.10.8"
bincode = "1.3.3"
