[package]
name = "taralli-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
serde_bytes = "=0.11.15"

[dev-dependencies]
tokio = { workspace = true }
