[package]
name = "taralli-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
chrono = {workspace = true}
ethers = { version = "2.0", features = ["ws", "rustls", "eip712"] }
bincode = "1.1.3"
eventsource-stream = "0.2.3"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
reqwest-eventsource = "0.6.0"
taralli-primitives = { path = "../taralli-primitives" }
futures-util = "0.3.30"
futures = "0.3.30"
log = "0.4.22"
sha3 = "0.10.8"
url = { version = "2.5.2", features = ["serde"] }
lazy_static = "1.5.0"
async-trait = "0.1.83"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
risc0-zkvm = { version = "1.2.0", features = ["bonsai"] }
sp1-sdk = "3.4.0"
ark-circom = "0.5.0"
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.12.2" }
tempfile = "3.14.0"
wasmer = "4.4.0"
num-bigint = "0.4.6"

[dev-dependencies]
color-eyre = "0.6.3"
anyhow = "1.0.86"
dotenv = "0.15.0"
k256 = "0.13.4"

