[package]
name = "taralli-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
taralli-primitives = { path = "../taralli-primitives" }
alloy = { workspace = true }
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha3 = { workspace = true }
risc0-zkvm = { workspace = true }
eventsource-stream = "0.2.3"
rand = "0.8.5"
reqwest-eventsource = "0.6.0"
config = "0.14.0"
sp1-sdk = "3.4.0"
ark-circom = "0.5.0"
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.12.2" }
bincode = "1.1.3"
ethers = { version = "2.0", features = ["ws", "rustls", "eip712"] }
tempfile = "3.14.0"
wasmer = "4.4.0"
num-bigint = "0.4.6"

[dev-dependencies]
color-eyre = { workspace = true }
anyhow = "1.0.86"
dotenv = "0.15.0"
k256 = "0.13.4"

