[package]
name = "taralli-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
taralli-primitives = { workspace = true }
taralli-common = { workspace = true }
alloy = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha3 = { workspace = true }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ["client"] }
bonsai-sdk = { version = "1.2.0", features = ["non_blocking"] }
bytemuck = "1.21.0"
hex = "0.4.3"
rand = "0.8.5"
config = "0.14.0"
sp1-sdk = "4.0.0"
ark-circom = "0.5.0"
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.12.2" }
bincode = "1.1.3"
ethers = { version = "2.0", features = ["ws", "rustls", "eip712"] }
tempfile = "3.14.0"
wasmer = "4.4.0"
num-bigint = "0.4.6"

[dev-dependencies]
color-eyre = { workspace = true }
anyhow = "1.0.86"
dotenv = "0.15.0"
k256 = "0.13.4"
