[package]
name = "taralli-requester"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
taralli-primitives = { path = "../taralli-primitives" }
futures-util = "0.3.30"
futures = "0.3.30"
log = "0.4.22"
url = { version = "2.5.2", features = ["serde"] }
lazy_static = "1.5.0"
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
risc0-zkvm = { workspace = true }

[dev-dependencies]
taralli-systems = { path = "../taralli-systems" }
alloy = { workspace = true }
color-eyre = "0.6.3"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
sha3 = "0.10.8"
