[package]
name = "taralli-requester"
version = "0.1.0"
edition = "2021"

[dependencies]
taralli-primitives = { workspace = true }
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
color-eyre = { workspace = true }
dotenv = { workspace = true }
sha3 = { workspace = true }
