[package]
name = "taralli-server"
version = "0.1.0"
edition = "2021"

[dependencies]
taralli-primitives = { workspace = true }
alloy = { workspace = true, features = ["full", "getrandom"] }
brotli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "io-util"] }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
base64 = "0.22.0"
bytes = "1.6.0"
tokio-stream = "0.1.14"
tokio-util = { workspace = true }
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "decompression-full",
    "trace",
] }
async-stream = "0.3.5"
hex = "0.4.3"
hyper = "1.6.0"
http-body-util = "0.1.2"
bincode = "1.3.3"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
rstest = "0.17"
taralli-requester = { workspace = true }
taralli-provider = { workspace = true }
serial_test = "3.1.1"